--- a/Calculatrice/Calculatrice.csproj
+++ b/Calculatrice/Calculatrice.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6C374B53-EEC5-4A03-B4BA-D04AA77E674E}</ProjectGuid>
+    <ProjectGuid>{291C2ABD-DEB5-4186-AA21-D886C89FDE65}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WFSopra</RootNamespace>
-    <AssemblyName>WFSopra</AssemblyName>
+    <RootNamespace>Calculatrice</RootNamespace>
+    <AssemblyName>Calculatrice</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Calculatrice.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Calculatrice.Designer.cs">
+      <DependentUpon>Calculatrice.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Calculatrice.resx">
+      <DependentUpon>Calculatrice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
